--- a/res/xml/cdma_options.xml
+++ b/res/xml/cdma_options.xml
@@ -47,7 +47,8 @@
 
     <Preference
         android:key="carrier_settings_key"
-        android:title="@string/carrier_settings_title">
+        android:title="@string/carrier_settings_title"
+        android:icon="@drawable/ic_carrier_settings">
         <intent android:action="android.intent.action.MAIN"
                 android:targetPackage="@string/carrier_settings"
                 android:targetClass="@string/carrier_settings_menu" />
