--- a/res/xml/gsm_umts_options.xml
+++ b/res/xml/gsm_umts_options.xml
@@ -55,7 +55,8 @@
 
     <PreferenceScreen
         android:key="carrier_settings_key"
-        android:title="@string/carrier_settings_title">
+        android:title="@string/carrier_settings_title"
+        android:icon="@drawable/ic_carrier_settings">
         <intent android:action="android.intent.action.MAIN"
                 android:targetPackage="@string/carrier_settings"
                 android:targetClass="@string/carrier_settings_menu" />
