--- a/res/xml/network_setting_fragment.xml
+++ b/res/xml/network_setting_fragment.xml
@@ -77,7 +77,8 @@
 
         <PreferenceScreen
             android:key="wifi_calling_key"
-            android:title="@string/wifi_calling_settings_title">
+            android:title="@string/wifi_calling_settings_title"
+            android:icon="@drawable/ic_wifi_calling">
 
             <intent android:action="android.intent.action.MAIN"
                     android:targetPackage="com.android.settings"
